# ShowTime-Prototype

./: .gitignore
SoundPropagation/: SoundPropagation.sln
SoundPropagation/SoundPropagation/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
SoundPropagation/SoundPropagation/Models/: Tile.cs
SoundPropagation/SoundPropagation/ViewModels/: MainWindowViewModel.cs  SoundGrid.cs  ViewModelBase.cs
SoundPropagation/SoundPropagation/Views/: MainWindow.axaml  MainWindow.axaml.cs
audiobackend/: CMakeLists.txt  build.sh  showtime-audio-backend
audiobackend/drivers/BlackHole.driver/Contents/: Info.plist
audiobackend/drivers/BlackHole.driver/Contents/MacOS/: BlackHole
audiobackend/drivers/ShowTime.driver/BlackHole.driver/Contents/Resources/: create_installer.sh
audiobackend/drivers/ShowTime.driver/BlackHole.driver/Contents/_CodeSignature/: CodeResources
audiobackend/src/: AudioEngine.cpp  AudioEngine.hpp  main.cpp
audiobackend/src/API/: ApiClient.cpp  ApiClient.hpp
audiobackend/src/Effects/: AEffect.hpp  EqualizerEffect.hpp  GainEffect.hpp  IEffect.hpp  PanEffect.hpp  PhaseInverterEffect.hpp  ReverbEffect.hpp
graphic/: .gitignore  project.sln
graphic/project/: App.axaml  DragAndDrop.axaml  DragAndDrop.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  RotateButton.axaml  RotateButton.axaml.cs  project.csproj
graphic/project/Client/: Client.cs  ServerSocket.cs
graphic/project/Components/: Button.axaml  Button.axaml.cs  DeviceList.axaml  DeviceList.cs  DragAndDrop.axaml  DragAndDrop.axaml.cs  FaderInput.axaml  FaderInput.axaml.cs  FaderOutput.axaml  FaderOutput.axaml.cs  GainButton.axaml  GainButton.axaml.cs  MeeterInput.axaml  MeeterInput.axaml.cs  MeeterOutput.axaml  MeeterOutput.axaml.cs  OnOffGain.axaml  OnOffGain.axaml.cs  OnOffPan.axaml  OnOffPan.axaml.cs  OnOffPhaseInvert.axaml  OnOffPhaseInvert.axaml.cs  OnOffReverb.axaml  OnOffReverb.axaml.cs  PanButton.axaml  PanButton.axaml.cs  ReverbButton.axaml  ReverbButton.axaml.cs  (+2 more)
